2010-02-09  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Use NIH_COPYRIGHT instead of AC_COPYRIGHT

2010-02-04  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.6.6
	* NEWS: Begin new release

	* NEWS: Release 0.6.5

	* util/tests/test_initctl.c (test_reload_action): Don't send
	SIGHUP to the server process, it'll be terminated anyway since
	reload doesn't loop.

	* init/event_operator.c (event_operator_match): Support operator
	negation using !=
	* init/tests/test_event_operator.c (test_operator_update): Add
	test cases for negation.
	* init/man/init.5: Add negation to documentation

	* init/man/init.8: Improve reference to init(5) to make it more
	obvious that this is where documentation can be found.
	* init/man/init.5: Add Upstart to the title to make it show up
	with man -k upstart

	* init/man/init.8: Add missing OPTIONS section, documenting the
	--verbose option.

	* init/main.c (main): After resetting the system console, close it
	again and reopen /dev/null for ourselves so we don't hold the
	system console open.

	* init/job_process.c (job_process_error_abort): Free the error
	before exiting.

	* util/initctl.c (reload_action): Add a reload command, this obtains
	the pid of the main process of the given job instance and sends
	SIGHUP to it.  It might not be in its final form, but it's damned
	useful for now.
	* util/tests/test_initctl.c (test_reload_action): Add test cases.
	* util/man/initctl.8: Add documentation for the reload command,
	and missing documentation for restart.
	* util/Makefile.am (install-data-hook, install-exec-hook): Create
	additional reload symlinks.

	* util/reboot.c (main): Restore the sync() system call before
	calling reboot(); the Linux kernel says we have to do this, and I
	suspect that ext4 is no longer forcing this before power off.

	* init/main.c (hup_handler): Move call to reconnect to D-Bus system
	bus into new function